<resources>
    <string name="app_name">My Test Application</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_8">Button 8</string>
</resources>
